cabal-version:      3.0
name:               haskell
version:            0.1.0.0
license:            NONE
author:             Unbot2313
maintainer:         126409052+Unbot2313@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      directory     
    hs-source-dirs:   app
    default-language: Haskell2010
